# maxcorr

./: .gitignore  pyproject.toml  tutorial.ipynb
.github/workflows/: main.yml
maxcorr/: __init__.py  cuda_path_utils.py  typing.py
maxcorr/backends/: backend.py  numpy.py  tensorflow.py  torch.py
maxcorr/indicators/: __init__.py  density.py  gradient.py  indicator.py  kernel.py  randomized.py
test/backends/: test_backend.py  test_numpy.py  test_tensorflow.py  test_torch.py
test/indicators/: test_density.py  test_gradient.py  test_indicator.py  test_kernel.py  test_randomized.py
