# test using 'pytest'
# build using 'hatch build'
# publish using 'hatch publish'

[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[project]
name = 'maxcorr'
version = '0.1.2'
requires-python = '>=3.8'
dependencies = [
    'numpy >= 1.24',
    'pandas >= 1.4',
    'scikit-learn >= 1.1',
    'scipy >= 1.10'
]
description = 'MaxCorr: A Package for Maximal Correlation Indicators'
readme = { file = 'README.md', content-type = 'text/markdown' }
authors = [
    { name = 'Luca Giuliani', email = 'luca.giuliani13@unibo.it' },
    { name = 'University of Bologna - DISI' }
]
maintainers = [
    { name = 'Luca Giuliani', email = 'luca.giuliani13@unibo.it' }
]
license = 'MIT'
classifiers = [
    'Development Status :: 3 - Alpha',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python',
    'Operating System :: OS Independent'
]

[project.optional-dependencies]
torch = [
    'torch >= 1.12'
]
tensorflow = [
    'tensorflow >= 2.13'
]
lattice = [
    'tensorflow >= 2.13',
    'tensorflow-lattice >= 2.0.9'
]
full = [
    'torch >= 1.12',
    'tensorflow >= 2.13',
    'tensorflow-lattice >= 2.0.9'
]

[tool.hatch.build.targets.wheel]
packages = ['maxcorr']

[project.urls]
Repository = 'https://github.com/giuluck/maxcorr'